<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigation_before"
        app:title="@string/title_voltar"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/txtConfirmed"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:foregroundTint="#FFFFFF"
        android:text="@string/textView_confirmados"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/txtConfHomeIsolation"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:foregroundTint="#FFFFFF"
        android:text="@string/textView_confirmados_isolamento_hospitalar"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <TextView
        android:id="@+id/txtSuspects"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:foregroundTint="#FFFFFF"
        android:text="@string/textView_suspeitos"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/valSuspects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtSuspects"
        tools:text="10" />

    <TextView
        android:id="@+id/txtDiscarded"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:foregroundTint="#FFFFFF"
        android:text="@string/textView_descartados"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TextView
        android:id="@+id/valDiscarded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtDiscarded"
        tools:text="10" />

    <TextView
        android:id="@+id/txtCured"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:foregroundTint="#FFFFFF"
        android:text="@string/textView_curados"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <TextView
        android:id="@+id/valCured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtCured"
        tools:text="10" />

    <TextView
        android:id="@+id/txtHosIsolation"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:foregroundTint="#FFFFFF"
        android:text="@string/textView_suspeitos_isolamento_hospitalar"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <TextView
        android:id="@+id/valHosIsolation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtHosIsolation"
        tools:text="10" />

    <TextView
        android:id="@+id/txtMonitoring"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:foregroundTint="#FFFFFF"
        android:text="@string/textView_monitoramento"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TextView
        android:id="@+id/valMonitoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/txtMonitoring"
        tools:text="10" />

    <TextView
        android:id="@+id/txtSusHomeIsolation"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:foregroundTint="#FFFFFF"
        android:text="@string/textView_suspeitos_isolamento_domiciliar"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <TextView
        android:id="@+id/valSusHomeIsolation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/txtSusHomeIsolation"
        tools:text="10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="64dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="137dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="211dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="307dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="403dp" />

    <TextView
        android:id="@+id/valConfHomeIsolation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/txtConfHomeIsolation"
        tools:text="10" />

    <TextView
        android:id="@+id/valConfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmed"
        tools:text="10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="179dp" />

    <TextView
        android:id="@+id/valDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        tools:text="10"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDeaths" />

    <TextView
        android:id="@+id/txtDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundTint="#FFFFFF"
        android:text="@string/textView_mortes"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/infoHour"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="84dp"
        android:gravity="center"
        tools:text="00:00"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/infoDate" />

    <TextView
        android:id="@+id/infoDate"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="84dp"
        android:gravity="center"
        tools:text="00/00/000"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/infoHour"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>